--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -13,7 +13,7 @@
     <mat-tab label="{{ 'ordinary_payment' | i18n }}">
       <app-send-burst-form [fees]="fees" [account]="account"></app-send-burst-form>
     </mat-tab>
-    <mat-tab label="Multi-Out">
+    <mat-tab label="{{ 'multi_out_payment' | i18n }}">
       <app-send-multi-out-form [fees]="fees" [account]="account"></app-send-multi-out-form>
     </mat-tab>
   </mat-tab-group>
