--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -29,10 +29,12 @@
     <mat-form-field>
       <textarea matInput [disabled]="immutable" [(ngModel)]="message" name="message" placeholder="{{ 'message' | i18n }}"></textarea>
     </mat-form-field>
-    <mat-checkbox  labelPosition="before" [disabled]="immutable" [(ngModel)]="encrypt" name="encrypt">{{ "encrypt_message" | i18n }}?</mat-checkbox>
+    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="encrypt" name="encrypt">{{ "encrypt_message" | i18n }}?</mat-checkbox>
   </div>
 
   <div *ngIf="advanced">
+    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="messageIsText" name="messageIsText">{{ "message_is_text" | i18n }}</mat-checkbox>
+    
     <mat-form-field>
       <label>{{ 'deadline_hours' | i18n }}</label>
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
