--- a/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/batch-recipients-dialog/batch-recipients-dialog.component.html
@@ -1,7 +1,7 @@
 <div class="w-100-p p-24">
-  <h1 mat-dialog-title>{{"csv_add_recipients" | i18n}}</h1>
-  <div mat-dialog-content>
-    <form [formGroup]="formGroup">
+  <form [formGroup]="formGroup" (ngSubmit)="submit()">
+    <h1 mat-dialog-title>{{"csv_add_recipients" | i18n}}</h1>
+    <div mat-dialog-content>
       <mat-form-field class="w-100-p">
         <mat-select placeholder="{{'choose_delimiter' | i18n}}" formControlName="delimiter">
           <mat-option *ngFor="let delimiter of delimiters" [value]="delimiter.value">
@@ -24,10 +24,10 @@
         <mat-icon *ngIf="isValid" class="green-800-fg ml-8">done</mat-icon>
         <mat-icon *ngIf="!isValid" class="warn-700-fg ml-8">remove_circle</mat-icon>
       </span>
-    </form>
-  </div>
-  <div mat-dialog-actions class="right">
-    <button mat-button [mat-dialog-close]>{{ 'cancel' | i18n }}</button>
-    <button mat-button [mat-dialog-close]="true" color="accent" disabled="{{!isValid}}">{{ 'submit' | i18n }}</button>
-  </div>
+    </div>
+    <div mat-dialog-actions class="right">
+      <button mat-button [mat-dialog-close]>{{ 'cancel' | i18n }}</button>
+      <button type="submit" mat-button color="accent" disabled="{{!isValid}}">{{ 'submit' | i18n }}</button>
+    </div>
+  </form>
 </div>
