--- a/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst-form/send-burst-form.component.html
@@ -1,6 +1,11 @@
 <form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
 
-  <burst-recipient-input [recipient]="recipient" (qrCodeUpload)="onQRUpload($event)" (recipientChange)="onRecipientChange($event)" [disabled]="immutable" ></burst-recipient-input>
+  <burst-recipient-input [recipientValue]="recipient.addressRaw"
+                         (recipientChange)="onRecipientChange($event)"
+                         (qrCodeUpload)="onQRUpload($event)"
+                         [disabled]="immutable">
+
+  </burst-recipient-input>
 
   <div class="amount-wrapper">
     <mat-form-field>
@@ -23,18 +28,23 @@
 
   <burst-fee-selector *ngIf="!immutable" [fees]="fees" [(feeNQT)]="fee"></burst-fee-selector>
 
-  <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage" name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
+  <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="showMessage"
+                name="showMessage">{{ "add_message_q" | i18n }}</mat-checkbox>
 
   <div *ngIf="showMessage">
     <mat-form-field>
-      <textarea matInput [disabled]="immutable" [(ngModel)]="message" name="message" placeholder="{{ 'message' | i18n }}"></textarea>
+      <textarea matInput [disabled]="immutable" [(ngModel)]="message" name="message"
+                placeholder="{{ 'message' | i18n }}"></textarea>
     </mat-form-field>
-    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="encrypt" name="encrypt">{{ "encrypt_message" | i18n }}?</mat-checkbox>
+    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="encrypt"
+                  name="encrypt">{{ "encrypt_message" | i18n }}?
+    </mat-checkbox>
   </div>
 
   <div *ngIf="advanced">
-    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="messageIsText" name="messageIsText">{{ "message_is_text" | i18n }}</mat-checkbox>
-    
+    <mat-checkbox labelPosition="before" [disabled]="immutable" [(ngModel)]="messageIsText"
+                  name="messageIsText">{{ "message_is_text" | i18n }}</mat-checkbox>
+
     <mat-form-field>
       <label>{{ 'deadline_hours' | i18n }}</label>
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
