--- a/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-burst.component.html
@@ -1,4 +1,4 @@
-<app-page title="{{ 'send_burst' | i18n }}" *ngIf="fees">
+<app-page title="{{ 'send_burst' | i18n }}" *ngIf="fees" [wide]="true">
   <div class="account-info pl-20 pr-20 mb-8">
     <div class="account-info__field">
       <small class="secondary-text text-uppercase">{{'account'| i18n}}</small>
