--- a/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
@@ -18,9 +18,11 @@
         {{getValidationIcon()}}
       </mat-icon>
     </div>
-    <input #file type="file" accept="image/*" (change)="parseQR()" id="{{fileId}}" class="inputfile" capture="camera">
-    <label for="{{fileId}}" class="camera-icon" *ngIf="!disabled">
-      <mat-icon>camera_alt</mat-icon>
-    </label>
+    <ng-container *ngIf="withQrCode">
+      <input #file type="file" accept="image/*" (change)="parseQR()" id="{{fileId}}" class="inputfile" capture="camera">
+      <label for="{{fileId}}" class="camera-icon" *ngIf="!disabled">
+        <mat-icon>camera_alt</mat-icon>
+      </label>
+    </ng-container>
   </div>
 </mat-form-field>
