fixing my own review issues

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -8,7 +8,7 @@
     >{{ "same_out" | i18n }}?
     </mat-checkbox>
     <div class="button-wrapper">
-      <button mat-icon-button (click)="resetRecipients()" matTooltip="{{'add_recipient_batch' | i18n}}">
+      <button mat-icon-button (click)="resetRecipients()" matTooltip="{{'reset_recipients' | i18n}}">
         <mat-icon>delete_sweep</mat-icon>
       </button>
       <button mat-icon-button (click)="addBatchedRecipient($event)" matTooltip="{{'add_recipient_batch' | i18n}}">
