fix: cleanup useless class

--- a/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
+++ b/web/angular-wallet/src/app/main/transactions/transaction-details/transaction-row-value-cell/transaction-row-value-cell.component.html
@@ -45,11 +45,11 @@
   </div>
 
   <div *ngSwitchCase="'AssetTransfer'">
-    <div class="data-item">
+    <div>
       <label class="mr-8">{{'asset' | i18n}}:</label>
       <span>{{value.data.asset}}</span>
     </div>
-    <div class="data-item">
+    <div>
       <label class="mr-8">{{'quantity' | i18n}} (QNT):</label>
       <span>{{value.data.quantityQNT}}</span>
     </div>
