Feat/csv support multiout (#710)
* Added icon buttons and dialog stub for batched recipients

* Implemented Recipient Amount CSV Parser

* fixed failing tests

* Refactored burst-recipient-input to to receive a recipient as value

* batch processing is working for same and multi out now

* refining usability of multi out

* fixing my own review issues

* fix: Recipient Input Resets now

* Fixed Resetting issue, added removal for recipient items, and changed add feature

* pico refactoring

* Updated Changelog

* New version bumped...when release @blankey1337? :)

--- a/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
+++ b/web/angular-wallet/src/app/main/send-burst/send-multi-out-form/send-multi-out-form.component.html
@@ -1,29 +1,53 @@
-<form (ngSubmit)="onSubmit($event);" #sendBurstForm="ngForm">
+<form (ngSubmit)="onSubmit($event)" #sendBurstForm="ngForm">
 
-  <mat-checkbox labelPosition="before" (click)="toggleSameAmount()" class="same-amount">{{ "same_out" | i18n }}?</mat-checkbox>
+  <div class="action-container">
+    <mat-checkbox labelPosition="before"
+                  name="same-amount-checkbox"
+                  class="same-amount"
+                  [(ngModel)]="sameAmount"
+    >{{ "same_out" | i18n }}?
+    </mat-checkbox>
+    <div class="button-wrapper">
+      <button mat-icon-button type="button" (click)="resetRecipients()" matTooltip="{{'reset_recipients' | i18n}}">
+        <mat-icon>delete_sweep</mat-icon>
+      </button>
+      <button mat-icon-button type="button" (click)="addBatchedRecipient($event)"
+              matTooltip="{{'add_recipient_batch' | i18n}}">
+        <mat-icon>unarchive</mat-icon>
+      </button>
+    </div>
+  </div>
 
   <mat-form-field *ngIf="sameAmount">
     <input matInput [(ngModel)]="amount" name="amount" placeholder="{{ 'amount' | i18n }}">
   </mat-form-field>
 
-
-  <ng-container *ngFor="let recipient of recipients; let i = index; trackBy: trackByIndex;" [attr.data-index]="i">
-
-    <div class="recipients-item">
-      <burst-recipient-input (recipientChange)="onRecipientChange($event, i)"></burst-recipient-input>
-      <mat-form-field *ngIf="!sameAmount">
-        <input matInput [(ngModel)]="recipients[i].amount" name="amount{{i}}"
-               placeholder="{{ 'amount' | i18n }}">
-      </mat-form-field>
-<!--
-      FUTURE FEATURE
-      <mat-icon *ngIf="recipients.length > 1" matTooltip="{{'delete' | i18n}}" (click)="onDeleteRecipient(i)" >delete</mat-icon>
--->
+  <div class="recipients-container">
+    <small [class.no-balance]="hasRecipientsExceeded()">{{getRecipientCounter()}}</small>
+    <div class="recipients-list">
+      <ng-container *ngFor="let recipient of recipients; let i = index; trackBy: trackByIndex;" [attr.data-index]="i">
+        <div class="recipients-item">
+          <burst-recipient-input [recipientValue]="recipient.addressRaw"
+                                 (recipientChange)="onRecipientChange($event, i)"
+                                 [withQrCode]="false"></burst-recipient-input>
+          <mat-form-field *ngIf="!sameAmount">
+            <input matInput [(ngModel)]="recipient.amount"
+                   name="amount{{i}}"
+                   placeholder="{{ 'amount' | i18n }}"
+            >
+          </mat-form-field>
+          <button *ngIf="isLastRecipientItem(i)" mat-icon-button type="button" (click)="addRecipient($event)"
+                  matTooltip="{{'add_recipient' | i18n}}">
+            <mat-icon color="accent">add_box</mat-icon>
+          </button>
+          <button *ngIf="this.recipients.length > 1" mat-icon-button type="button" (click)="removeRecipientItem(i)"
+                  matTooltip="{{'add_recipient' | i18n}}">
+            <mat-icon color="warn">clear</mat-icon>
+          </button>
+        </div>
+      </ng-container>
     </div>
-
-  </ng-container>
-
-  <button mat-button type="button" class="add-recipient" (click)="addRecipient($event)">{{ "add_recipient" | i18n }}</button>
+  </div>
 
   <mat-form-field>
     <input matInput [(ngModel)]="fee" name="fee" placeholder="{{ 'fee' | i18n }}">
@@ -36,26 +60,6 @@
       <label>{{ 'deadline_hours' | i18n }}</label>
       <input matInput [(ngModel)]="deadline" name="deadline" placeholder="{{ 'deadline_hours' | i18n }}">
     </mat-form-field>
-
-    <!--WILL BE A FUTURE FEATURE-->
-    <!--
-        <mat-form-field appearance="outline">
-          <input matInput [(ngModel)]="fullHash" name="fullHash"
-                 placeholder="{{ 'referenced_transaction_full_hash' | i18n }}" disabled>
-        </mat-form-field>
-
-        <mat-checkbox [(ngModel)]="broadcast" name="broadcast" disabled>{{ "do_not_broadcast" | i18n }}</mat-checkbox>
-        <br/>
-
-        <mat-checkbox [(ngModel)]="note" name="note" disabled>{{ "add_note_to_self_q" | i18n }}</mat-checkbox>
-
-        <div *ngIf="note">
-          <mat-form-field appearance="outline">
-            <textarea matInput [(ngModel)]="note_text" name="note_text" placeholder="{{ 'note' | i18n }}"></textarea>
-          </mat-form-field>
-        </div>
-    -->
-
   </div>
   <div class="send-button-wrapper">
     <mat-form-field class="message-text password-field" floatLabel="never" appearance="standard">
