chore: fix the build

--- a/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
@@ -7,7 +7,7 @@
            placeholder="{{ 'recipient' | i18n }}"
            [disabled]="disabled">
 
-    <div *ngIf="recipient.type !== 1 && recipient.status !== 4"
+    <div *ngIf="recipient.type !== 1 && recipient.status !== 'zil-outage'"
          class="recipient-address"
          title="{{ recipient.addressRS }}">
         {{ recipient.addressRS }}
