Add .zil/.crypto support (#844)
* feat(desktop): add support for zil domains

* feat(desktop): add missing files

* feat(desktop): improve autosuggest on burst input recipient component

* test(DomainService): update tests

* chore(desktop): clean up

* chore(desktop): clean up

* fix(qr): convert recipient to burst address on scan

* release cleanup

* chore: remove unused code

* chore: remove unused code

* chore: jk it was used code

* fix(domainService): always cast to lower case

* feat(android): get android working and fix chart spike issue

* fix(chart): fix chart spike issue for real

* fix(terms): store Agree To Terms in AsyncStorage

* feat(mobile): add ability to search by Alias

* feat(mobile): upgrade zil lib, get it working

* chore: fix the build

* chore: fix codacy warnings

* chore: fix codacy warnings

* feat(zil): rip out namicorn

* chore: more removals

* chore(desktop): revert package.json

--- a/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
+++ b/web/angular-wallet/src/app/layout/components/burst-recipient-input/burst-recipient-input.component.html
@@ -2,19 +2,23 @@
   <div class="container" fxFlex="1 0 auto" fxLayout="row" fxLayoutAlign="start center">
     <input matInput
            [(ngModel)]="recipientValue"
-           (ngModelChange)="applyRecipientType(recipientValue)"
+           (ngModelChange)="onRecipientFieldInputChange(recipientValue)"
            (blur)="validateRecipient(recipientValue)"
            placeholder="{{ 'recipient' | i18n }}"
            [disabled]="disabled">
 
-    <div *ngIf="recipient.type!==1" class="recipient-address">{{ recipient.addressRS}}</div>
+    <div *ngIf="recipient.type !== 1 && recipient.status !== 'zil-outage'"
+         class="recipient-address"
+         title="{{ recipient.addressRS }}">
+        {{ recipient.addressRS }}
+    </div>
     <div fxFlex fxLayout="row"
          *ngIf="recipient.type>0"
          [ngClass]="getValidationClass()"
          matTooltip="{{getValidationHint()}}"
     >
       <div>{{getRecipientTypeName()}}</div>
-      <mat-icon [ngClass]="recipient.status === 'valid' ? '' : 'fuse-black-500-fg'">
+      <mat-icon>
         {{getValidationIcon()}}
       </mat-icon>
     </div>
@@ -24,5 +28,6 @@
         <mat-icon>camera_alt</mat-icon>
       </label>
     </ng-container>
+    <mat-progress-bar *ngIf="loading" mode="query"></mat-progress-bar>
   </div>
 </mat-form-field>
