uncommented condition for activation message

--- a/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
+++ b/web/angular-wallet/src/app/main/dashboard/dashboard.component.html
@@ -11,8 +11,7 @@
         <mat-icon (click)="closeWelcomeNotification()" class="close">close</mat-icon>
       </mat-toolbar-row>
 
-<!--      <mat-toolbar-row class="warning" *ngIf="!account.confirmed && account.balanceNQT">-->
-      <mat-toolbar-row class="warning">
+      <mat-toolbar-row class="warning" *ngIf="!account.confirmed && account.balanceNQT">
         <mat-icon>warning</mat-icon>
         <span>{{ 'no_public_key_warning' | i18n }}</span>
         <button class="activate" mat-raised-button (click)="activateAccount()" disabled="{{isActivating}}">{{'activate' | i18n}}</button>
